BASIC-85: aiops code agent
